# fenrs

./: Cargo.toml
src/: main.rs
src/model/: game.rs  pgn.rs  piece.rs
src/parse/: pgn.rs  ply.rs
src/ui/: board.rs  games.rs  mod.rs  ply.rs  ply_list.rs
