[package]
name = "fenrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui = "0.23.0"
lazy_static = "1.4.0"
nom = "7.1.3"
time = { version = "0.3.30", features = ["formatting", "macros", "parsing"] }
